Fix T46805: Scale along axis fails w/ Python

't->value' no longer has constraint matrix applied for translate,
fix for T46003 is no longer needed.